--- a/week-3/00-middleWareZod/fetch-api/index.html
+++ b/week-3/00-middleWareZod/fetch-api/index.html
@@ -17,7 +17,16 @@
         //     })
             
         // }
+            async function getAnimalData(){
+              const response =  await fetch("https://fakerapi.it/api/v1/persons")
+
+              const finalData = await response.json()
+
+              console.log(finalData);
+              
+           }
      </script>
+
 
     <button onclick="getAnimalData()">Get Animal Data</button>
 </body>
