--- a/week-4/DOM/template.html
+++ b/week-4/DOM/template.html
@@ -14,21 +14,29 @@
 
 </head>
 <script>
-    function sum(){
-    let a = document.getElementById('a').value
-    let b = document.getElementById('b').value
-    const element  = document.getElementById('result')
-   fetch("http://localhost:3000/sum?a="+a+"&b="+b)
-   .then(function(response){
-    response.text()
-    .then(function(ans){
-         element.innerHTML=ans
-    })
-   })
+//     function sum(){
+//     let a = document.getElementById('a').value
+//     let b = document.getElementById('b').value
+//     const element  = document.getElementById('result')
+//    fetch("http://localhost:3000/sum?a="+a+"&b="+b)
+//    .then(function(response){
+//      response.text()
+//     .then(function(ans){
+//          element.innerHTML=ans
+//     })
+//    })
+// }
     // element.innerHTML = parseInt(a)+parseInt(b);
 
+   async function sum(){
+        let a = document.getElementById('a').value
+   let b = document.getElementById('b').value
+    const element  = document.getElementById('result')
+   const res = await fetch("http://localhost:3000/sum?a="+a+"&b="+b)
+   const data = await res.text()
+    element.innerHTML = data
+   }
 
-    }
 </script>
 <body>
     
