--- a/week-4/DOM/todo.html
+++ b/week-4/DOM/todo.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="title">
+    <input type="text" id="title" placeholder="title">
     <br><br>
-    <input type="text" id="description">
+    <input type="text" id="description" placeholder="description">
     <br><br>
     <button onclick="AddTodo()">Add todo</button>
     <div class="container" id="container">
@@ -19,12 +19,12 @@
 
     <script>
      function AddTodo(){
-      const title = document.getElementById('title');
-      const description = document.getElementById('description')
-      const container = document.getElementById('container')
-      container.innerHTML = ` <div>
+      const title = document.getElementById('title').value;
+      const description = document.getElementById('description').value
+      const originalHTML = document.getElementById('container').innerHTML
+       document.getElementById('container').innerHTML = originalHTML + ` <div>
     <div>${title}</div>
-    <div ${description}></div>
+    <div> ${description}></div>
     <button>mark as done</button>
  </div>`
 
