Feat : Need to add more functionalities

--- a/week-4/DOM/todoAdvance.html
+++ b/week-4/DOM/todoAdvance.html
@@ -58,8 +58,8 @@
      function addTodo(){
         const container = document.getElementById('container')
 
-        const title = parent.querySelector('input[type="text"]').value;
-        const description = parent.querySelector('input[placeholder="description"]').value;
+        // const title = parent.querySelector('input[type="text"]').value;
+        // const description = parent.querySelector('input[placeholder="description"]').value;
 
 
 
