Feat : Added Todo

--- a/week-4/DOM/updateTodo.html
+++ b/week-4/DOM/updateTodo.html
@@ -4,7 +4,12 @@
 <head>
   <script>
     let globalId = 1;
-    let todoState = [];
+    let todoState = [{
+        title:"Hi",
+        description:"gllf",
+        id:1,
+    }
+    ];
 
     function markAsDone(todoId) {
       const parent = document.getElementById(todoId);
